k8s/05-mysql-inventory.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-inventory
  namespace: presight
spec:
  serviceName: mysql-inventory
  replicas: 1
  selector:
    matchLabels:
      app: mysql-inventory
  template:
    metadata:
      labels:
        app: mysql-inventory
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-inventory-data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits: { cpu: "1", memory: "1Gi" }
  volumeClaimTemplates:
    - metadata:
        name: mysql-inventory-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-inventory
  namespace: presight
spec:
  clusterIP: None
  selector:
    app: mysql-inventory
  ports:
    - port: 3306
      targetPort: 3306
